[tool.poetry]
name = "esovalue"
version = "0.1.10"
description = "Valuation of employee stock options"
readme = 'README.md'
authors = ["Stéphane Thibaud <snthibaud@gmail.com>"]
repository = "https://github.com/snthibaud/esovalue"
license = "MIT"

[tool.poetry.urls]
"ESO valuation app" = "https://eso.stephanethibaud.xyz/"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mpmath = "*"
gmpy = "*"

[tool.poetry.dev-dependencies]
hypothesis = "*"
pytest = "*"
pytest-xdist = "*"
hvplot = "*"
networkx = "*"
scipy = ">1.6.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
