[tool.poetry]
name = "esovalue"
version = "0.1.12"
description = "Valuation of employee stock options"
readme = 'README.md'
authors = ["Stéphane Thibaud <snthibaud@gmail.com>"]
repository = "https://github.com/snthibaud/esovalue"
license = "MIT"

[tool.poetry.urls]
"ESO valuation app" = "https://eso.stephanethibaud.xyz/"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mpmath = "*"
gmpy = "*"
Pillow = ">=9.1.1"

[tool.poetry.dev-dependencies]
hypothesis = "*"
pytest = "*"
pytest-xdist = "*"
hvplot = "*"
networkx = "*"
scipy = ">1.6.1"
notebook = ">=6.4.12"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
